--- a/myproject/pom.xml
+++ b/myproject/pom.xml
@@ -14,5 +14,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version> <!-- Use a stable version -->
+    </dependency>
   </dependencies>
 </project>
